# leonardo_2

./: CMakeLists.txt  README.md  package.xml
bag_files/: play.sh  read_bag.m  record_camera.sh  record_markers.sh
config/: campo_gara.rviz  display_ptz_camera.rviz  markers.yaml  matrici_camere.txt  parameters.yaml  path_1to10.yaml  paths.yaml  research.yaml  sala_parameters.yaml  simulation_parameters.yaml
include/: aruco_manager.h  navigation.h  planner_spline.h  utils.h
include/leonardo_2/: navigation.h
launch/: arean_vis.launch  arena_volo.launch  aruco_d435.launch  aruco_detection.launch  aruco_webcam.launch  axis_aruco.launch  cam_only.launch  campo_gara.launch  display_ptz_camera.launch  drone.launch  get_video.launch  main.launch  navigation.launch  ptz_camera.launch  sala_tensione.launch  sensors.launch  simulation_main.launch  test_att_target.launch  test_drone.launch  tf.launch  vis_arena.launch
media/materials/scripts/: blue.material  white.material
models/arena_volo/: model.config  model.sdf
models/arena_volo/materials/scripts/: area1.material  area10.material  area3.material  (+2 more)
models/arena_volo/meshes/: arena_volo.dae  arena_volo.stl
models/campo_gara/: area10.sdf  model.config  model.sdf
models/campo_gara/meshes/: campo_gara.dae  campo_gara.stl
models/iris/: iris.xacro
models/iris_urdf/: component_snippets.xacro  iris.urdf  iris.xacro  iris_base.xacro  multirotor_base.xacro  sensors.xacro
models/pipe7/: model.config  pipe7.sdf
models/pipe7/meshes/: pipe7.dae  pipe9.dae
models/pipe9/: model.config  pipe9.sdf
models/pipe9/meshes/: pipe9.dae  tubo v0.stl
models/ptz_camera/: ptz_camera.urdf  ptz_camera.xacro
models/ptz_camera/config/: ptz_camera_control.yaml
models/roomba/: model.config  roomba.urdf.xacro
models/tarot/: tarot.xacro
rviz_config/: frames_camera.rviz
scripts/: display_map.py  seq_rec.py  test.docx  tof_read.py
src/: aruco_manager.cpp  main.cpp  navigation.cpp  planner_spline.cpp  ptz_control.cpp  simulation_main.cpp  socket_tf_listener.cpp  t265_matrix.cpp  test_aruco.cpp  test_attitude_target.cpp  test_navigation.cpp
worlds/: arena_volo.world  campo_gara.world
(+9 files in other folders)
